<resources>
    <string name="app_name">Quiz App</string>
    <string name="quizapp">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="flag_question">What country does this flag belong to?</string>
    <string name="score">Your Score is 9 out of 10</string>
    <string name="username">Username</string>
    <string name="finish">Finish</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
    <string name="image">image</string>
</resources>